# gpr340-sokol

./: .gitignore  CMakeLists.txt  README.md  ants.html  assignment1.html  assignment2.html  assignment3.html  assignment4.html  astro.config.mjs  catch_the_cat.html  cellular_automata.html  environment.html  faq.html  flocking.html  index.html  maze_generation.html  package-lock.json  package.json  tower_defense.html
assignments/: CMakeLists.txt
assignments/ants/: CMakeLists.txt  game.cpp  index.html
assignments/ants/src/: game.cpp
assignments/batteries/: CMakeLists.txt  agent.h  colors.h  finite_grid.h  graph.h  hexgrid.h  node.h
assignments/batteries/TEST/scene/: component.h
assignments/catch_the_cat/: CMakeLists.txt  game.cpp  index.html  world.cpp  world.h
assignments/catch_the_cat/agents/: agent.cpp  agent.h  cat.cpp  cat.h  catcher.cpp  catcher.h
assignments/catch_the_cat/src/: game.cpp
assignments/catch_the_cat/src/agents/: agent.cpp  agent.h
assignments/cellular_automata/: CMakeLists.txt  README.md  game.cpp  index.html
assignments/cellular_automata/rules/: cavegeneration.cpp  langtonsant.cpp
assignments/cellular_automata/src/: game.cpp  world.cpp  world.h
assignments/cellular_automata/src/rules/: cavegeneration.h  johnconway.cpp  johnconway.h  langtonsant.h  rockpaperscissors.cpp  rockpaperscissors.h  rulebase.h
assignments/flocking/: CMakeLists.txt  README.md  index.html
assignments/flocking/agents/: boid.h
assignments/flocking/behaviors/: cohesion.cpp  flockingbehavior.h  mouseinfluence.h  separation.h
assignments/flocking/src/: game.cpp
assignments/flocking/src/agents/: boid.cpp
assignments/flocking/src/behaviors/: alignment.cpp  alignment.h  boundingbox.cpp  boundingbox.h  cohesion.h  mouseinfluence.cpp  separation.cpp
assignments/maze/: CMakeLists.txt  README.md  game.cpp
assignments/maze/generators/: huntandkill.cpp  mazegenerator.h
assignments/maze/src/: game.cpp  world.cpp  world.h
assignments/maze/src/generators/: recursivebacktracker.cpp
assignments/maze_generation/: CMakeLists.txt  index.html
assignments/maze_generation/generators/: huntandkill.h  randomwalk.cpp  randomwalk.h  recursivebacktracker.h
assignments/tower-defense/: CMakeLists.txt  README.md
assignments/tower-defense/objects/: object.h
assignments/tower-defense/search/: astarsearch.h
assignments/tower-defense/src/: game.cpp  world.cpp  world.h
assignments/tower-defense/src/objects/: goal.h  start.h
assignments/tower-defense/src/search/: astarsearch.cpp  breadthfirstsearch.cpp  dijkstrasearch.cpp
assignments/tower_defense/: CMakeLists.txt  game.cpp  index.html  pathfinding.h  world.cpp  world.h
assignments/tower_defense/heuristic/: heuristic.h
assignments/tower_defense/search/: astarsearch.cpp  astarsearch.h  breadthfirstsearch.cpp  breadthfirstsearch.h  dijkstrasearch.cpp  dijkstrasearch.h  greedysearch.cpp  greedysearch.h  search.h
course/: assignment2.md  assignment3.md  assignment4.md  index.md
demo/: catch_the_cat.html  catch_the_cat.js  catch_the_cat.wasm  cellular_automata.html  cellular_automata.js  cellular_automata.wasm  flocking.html  flocking.js  flocking.wasm  maze.html  maze.js  maze.wasm
demos/: ants.html  ants.js  ants.wasm  catch_the_cat.html  catch_the_cat.js  catch_the_cat.wasm  cellular_automata.html  cellular_automata.js  cellular_automata.wasm  flocking.html  flocking.js  flocking.wasm  maze_generation.html  maze_generation.js  maze_generation.wasm  tower_defense.html  tower_defense.js  tower_defense.wasm
engine/: CMakeLists.txt  README.md
engine/common/: color.h  math.h  matrix4.h  vector3.h  vector4.h
engine/engine/: engine.h
engine/graphics/: graphics.cpp
engine/libs/: CMakeLists.txt
engine/libs/batteries/: CMakeLists.txt  README.md  graph.h
engine/libs/batteries/TEST/scene/: component.cpp  entity.h
engine/libs/dbgui/: CMakeLists.txt  dbgui.cpp
engine/libs/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp
engine/libs/sokol/: CMakeLists.txt  sokol.c  sokol_app.h  sokol_args.h  sokol_gfx.h  sokol_gl.h  sokol_glue.h  sokol_imgui.h  sokol_log.h  update.sh
engine/libs/stb/: CMakeLists.txt  stb.c  update.sh
engine/mouse/: mouse.cpp  mouse.h
engine/src/: platform.cpp
engine/src/common/: color.h  quaternion.h  vector2.h
engine/src/graphics/: graphics.cpp  graphics.h
engine/src/math/: math.cpp  math.h
environment/: index.html
extra/cmake/: batteries.cmake  dbgui.cmake  macros.cmake
faq/: index.html
libs/batteries/: camera.h  cellgrid.h  grid.h  grid_location.h  grid_world.h  hexgrid.h  hexgrid_location.h
libs/dbgui/: dbgui.cpp
libs/sokol/: sokol.c  update.sh
resources/: build.ts
resources/content/: assignment1.md  index.md
resources/content/assignments/: ants.md  catch_the_cat.md  cellular_automata.md  flocking.md  maze_generation.md  tower_defense.md
samples/: CMakeLists.txt  ant.cpp  behavioral_agent.cpp  hexagon.cpp  setup.cpp  test.cpp
scripts/: build.ts
website/src/: consts.ts
website/src/components/: Meta.astro
website/src/content/: config.ts
website/src/content/assignments/: ants.md  catch_the_cat.md  cellular_automata.md  flocking.md  maze_generation.md  tower_defense.md
website/src/pages/: environment.md  faq.md  index.md
